      chroots without a suffix (Closes: #360124).
    - Use the new modules Sbuild::Chroot, Sbuild::Conf and Sbuild::Log.
      The functions moved into the modules have been removed.
    - Import needed module functions into the local namespace, to avoid
      long namespace prefixes on functions.
    - Remove $main::chroot_apt_options.
  * Sbuild.pm: Add basename function.
  * Sbuild/Chroot.pm:
    - New perl module for chroot operations.  It contains the functions
      begin_session, end_session, log_command, get_command_internal,
      get_command, run_command, exec_command, get_apt_command_internal,
      get_apt_command and run_apt_command.
    - Don't export init and log_command.
    - Don't hardcode a list of chroots; use a glob to search for chroot-*
      instead.  This allows any distribution name to be specified with -d.
    - Add an "APT Options" attribute to the chroot hash, to replace
      $main::chroot_apt_options.
    - Use STDERR instead of PLOG (which may not be available).
  * Sbuild/Conf.pm: New perl module for configuration variables.  It reads
    the system and user configuration.
  * Sbuild/Log.pm: New perl module for logging.  It contains the functions
    open_log, close_log, open_pkg_log, close_pkg_log, add_time_entry,
    add_space_entry, send_mail and log_symlink.
  * bin/checkchroot:
    - Quote all variables.
    - Sort ref-chroot file before diffing (Closes: 360058).
  * avg-pkg-build-time.1.in, sbuild.1.in, sbuild-setup.7.in,
    update-sourcedeps.1.in, Sbuild/Log.pm.in: Rename and embed version and
    date tags for substitution.
  * COPYING: New file (GPL licence text).
  * debian/control: Update uploaders.
  * debian/copyright:
    - Update with new subversion repository locations for upstream and
      Debian.
    - Add Roger Leigh as a copyright holder.
    - Add a reference to /usr/share/common-licenses/GPL.
  * debian/dirs: Add usr/share/perl5/Sbuild.
  * debian/rules: